# Copyright (C) 2017-2020 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

November 06, 2020, AnnotSV version 2.5.2
	- feat: Add the pLI annotation from gnomAD (pLI_gnomAD), update the pLI annotation from ExAC (pLI_ExAC)
	- feat: Add the "LOEUF_bin" annotation (gnomAD)
	- feat: Add the "tx start", "tx end" and "Number of exons" annotations 
		The "tx length" column has been renamed "tx length overlapped"
	  	The "CDS length" column has been renamed "CDS length overlapped" 
	- feat: If not provided, the EXOMISER_GENE_PHENO_SCORE is set to "-1.0". 
	- Update README.md

October 13, 2020: AnnotSV version 2.5.1
	- fix:  Add bugfix when the "SV type" is badly formatted

October 12, 2020: AnnotSV version 2.5
	- Add of the "ENCODE blacklist", "Segmental Duplication" and "Gap" annotation datasets
	- Fix a critical bug for DGV annotation (GRCh38)
	- Add the distance / type to the nearest splice site after considering both breakpoints (distNearestSS and nearestSStype columns)
	- Add the in-frame / out-of-frame information from overlapping genes (frameshift column)
	- Add decision criteria explaining the ranking (previously available as a separate file)
	- Remove of the ranking decision output file (*.ranking.tsv)
	- Change the names of the values for the "tx" option:
		NM      >>  RefSeq
		ENST    >>  ENSEMBL	
	- Add bugfix for exomiser use (don't use some badly formatted NCBI gene ID)
	- Add bugfix allowing to use a configfile located in the same directory as the input file

July 30, 2020: AnnotSV version 2.4
	- Update of the annotations sources (see the corresponding README section)
	- Add of the COSMIC SV dataset (Cancer)